[package]
name = "iso-creator-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.0"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
notify = "6.0"

[dev-dependencies]
tempdir = "0.3"
